@@ -12,7 +12,10 @@ java_sources = \
   ItemAt.java \
   MakeAttribute.java \
   MakeElement.java \
+  MapDescendants.java \
+  MinMax.java \
   NumberValue.java \
+  Position.java \
   StringValue.java \
   SubList.java \
   ValuesFilter.java \
